hard-gists/6718314/run.log
=== Docker Run Log for 6718314 ===
Started at: Mi 29. Okt 16:42:19 CET 2025

[2025-10-29 16:42:20] START: Running container for 6718314
[2025-10-29 16:42:20] SUCCESS: Container 7199d08d960fe86fe636a380aaf50c2d85c0fc74a125e8a27dd3fec8a8f96a5b started for 6718314
=== Container logs for 6718314 ===
  File "/snippet.py", line 29
    print 'Removing %s from ELB %s' % (instance_id, elb.name)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6718314 ===
[2025-10-29 16:42:22] INFO: Container 7199d08d960fe86fe636a380aaf50c2d85c0fc74a125e8a27dd3fec8a8f96a5b has stopped
